WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62016
[Chromium] DumpRenderTree does not correctly recycle touchPoint ids
https://bugs.webkit.org/show_bug.cgi?id=62016
Summary
[Chromium] DumpRenderTree does not correctly recycle touchPoint ids
Robert Kroeger
Reported
2011-06-03 07:48:19 PDT
Chromium's DumpRenderTree does not correctly re-use the lowest touchPoint id on a touchRelease / touchPress cycle while a second touch is being held down. This causes BUGCR36415 : fast/events/touch/touch-target.html = FAIL TIMEOUT.
Attachments
Patch
(3.04 KB, patch)
2011-06-03 08:03 PDT
,
Robert Kroeger
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Kroeger
Comment 1
2011-06-03 08:03:13 PDT
Created
attachment 95914
[details]
Patch
Adam Barth
Comment 2
2011-06-03 10:31:25 PDT
Comment on
attachment 95914
[details]
Patch ok
WebKit Commit Bot
Comment 3
2011-06-03 11:33:49 PDT
Comment on
attachment 95914
[details]
Patch Clearing flags on attachment: 95914 Committed
r88032
: <
http://trac.webkit.org/changeset/88032
>
WebKit Commit Bot
Comment 4
2011-06-03 11:33:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug