2011-06-03  Robert Kroeger  <rjkroege@chromium.org>

Reviewed by Adam Barth.

        Removed test_expectations failure entry for BUGCR36415 as is fixed
        with patch in https://bugs.webkit.org/show_bug.cgi?id=62016

        * platform/chromium/test_expectations.txt:
2011-06-03  Robert Kroeger  <rjkroege@chromium.org>

        Reviewed by Adam Barth.

        Modified addTouchPoint to correctly re-use touchPoint id values starting
        from the lowest not-un-use touchPoint id as is done by the embedder
        APIs. (Fixes BUGCR36415)

        https://bugs.webkit.org/show_bug.cgi?id=62016

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::addTouchPoint):

Canonical link: https://commits.webkit.org/77497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88032 268f45cc-cd09-0410-ab3c-d52691b4dbfc